--- a/asm/project/td-galley-sa.yaml
+++ b/asm/project/td-galley-sa.yaml
@@ -8,21 +8,21 @@ spec:
   displayName: Istio galley credentials
   projectRoles:
   - roles/meshconfig.writer
----
-apiVersion: iam.cnrm.cloud.google.com/v1alpha1
-kind: IAMPolicy
-metadata:
-  name: asm-galley-iam-policy
-  namespace: "[PROJECT_ID]"
-spec:
-  resourceRef:
-    apiVersion: iam.cnrm.cloud.google.com/v1alpha1
-    kind: IAMServiceAccount
-    name: asm-galley-service-account
-  bindings:
-  - role: roles/iam.workloadIdentityUser
-    members:
-    - serviceAccount:[PROJECT_ID].svc.id.goog[istio-system/asm-galley-service-account] # {"$ref":"#/definitions/io.k8s.cli.substitutions.galley-service-account"}
+#---
+#apiVersion: iam.cnrm.cloud.google.com/v1alpha1
+#kind: IAMPolicy
+#metadata:
+#  name: asm-galley-iam-policy
+#  namespace: "[PROJECT_ID]"
+#spec:
+#  resourceRef:
+#    apiVersion: iam.cnrm.cloud.google.com/v1alpha1
+#    kind: IAMServiceAccount
+#    name: asm-galley-service-account
+#  bindings:
+#  - role: roles/iam.workloadIdentityUser
+#    members:
+#    - serviceAccount:[PROJECT_ID].svc.id.goog[istio-system/asm-galley-service-account] # {"$ref":"#/definitions/io.k8s.cli.substitutions.galley-service-account"}
 ---
 # Added to galley-sa file
 apiVersion: v1
