Removing deprecated calls, more cleanup

--- a/asm/project/enable-services.yaml
+++ b/asm/project/enable-services.yaml
@@ -1,88 +1,89 @@
-# Stackdriver
-apiVersion: cnrm.cloud.google.com/v1alpha1
-kind: CloudService
-metadata:
-  name: monitoring
-  namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
-spec:
-  service: monitoring.googleapis.com
 ---
-apiVersion: cnrm.cloud.google.com/v1alpha1
-kind: CloudService
+apiVersion: serviceusage.cnrm.cloud.google.com/v1beta1
+kind: Service
 metadata:
-  name: stackdriver
+  annotations:
+    cnrm.cloud.google.com/deletion-policy: "abandon"
+    cnrm.cloud.google.com/disable-dependent-services: "false"
   namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
-spec:
-  service: monitoring.googleapis.com
+  name: monitoring.googleapis.com
 ---
 # GCE
-apiVersion: cnrm.cloud.google.com/v1alpha1
-kind: CloudService
+apiVersion: serviceusage.cnrm.cloud.google.com/v1beta1
+kind: Service
 metadata:
-  name: compute
+  annotations:
+    cnrm.cloud.google.com/deletion-policy: "abandon"
+    cnrm.cloud.google.com/disable-dependent-services: "false"
   namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
-spec:
-  service: compute.googleapis.com
+  name: compute.googleapis.com
 ---
 # GKE
-apiVersion: cnrm.cloud.google.com/v1alpha1
-kind: CloudService
+apiVersion: serviceusage.cnrm.cloud.google.com/v1beta1
+kind: Service
 metadata:
-  name: gke
+  annotations:
+    cnrm.cloud.google.com/deletion-policy: "abandon"
+    cnrm.cloud.google.com/disable-dependent-services: "false"
   namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
-spec:
-  service: container.googleapis.com
+  name: container.googleapis.com
 ---
 # Short lived iam credentials for workload identity
-apiVersion: cnrm.cloud.google.com/v1alpha1
-kind: CloudService
+apiVersion: serviceusage.cnrm.cloud.google.com/v1beta1
+kind: Service
 metadata:
-  name: iamcredentials
+  annotations:
+    cnrm.cloud.google.com/deletion-policy: "abandon"
+    cnrm.cloud.google.com/disable-dependent-services: "false"
   namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
-spec:
-  service: iamcredentials.googleapis.com
+  name: iamcredentials.googleapis.com
 ---
 # Mesh Certificate Authority
-apiVersion: cnrm.cloud.google.com/v1alpha1
-kind: CloudService
+apiVersion: serviceusage.cnrm.cloud.google.com/v1beta1
+kind: Service
 metadata:
-  name: meshca
+  annotations:
+    cnrm.cloud.google.com/deletion-policy: "abandon"
+    cnrm.cloud.google.com/disable-dependent-services: "false"
   namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
-spec:
-  service: meshca.googleapis.com
+  name: meshca.googleapis.com
 ---
 # Mesh Telemetry
-apiVersion: cnrm.cloud.google.com/v1alpha1
-kind: CloudService
+apiVersion: serviceusage.cnrm.cloud.google.com/v1beta1
+kind: Service
 metadata:
-  name: meshtelemetry
+  annotations:
+    cnrm.cloud.google.com/deletion-policy: "abandon"
+    cnrm.cloud.google.com/disable-dependent-services: "false"
   namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
-spec:
-  service: meshtelemetry.googleapis.com
+  name: meshtelemetry.googleapis.com
 ---
 # Mesh Config
-apiVersion: cnrm.cloud.google.com/v1alpha1
-kind: CloudService
+apiVersion: serviceusage.cnrm.cloud.google.com/v1beta1
+kind: Service
 metadata:
-  name: meshconfig
+  annotations:
+    cnrm.cloud.google.com/deletion-policy: "abandon"
+    cnrm.cloud.google.com/disable-dependent-services: "false"
   namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
-spec:
-  service: meshconfig.googleapis.com
+  name: meshconfig.googleapis.com
 ---
 # Traffic Director
-apiVersion: cnrm.cloud.google.com/v1alpha1
-kind: CloudService
+apiVersion: serviceusage.cnrm.cloud.google.com/v1beta1
+kind: Service
 metadata:
-  name: trafficdirector
+  annotations:
+    cnrm.cloud.google.com/deletion-policy: "abandon"
+    cnrm.cloud.google.com/disable-dependent-services: "false"
   namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
-spec:
-  service: trafficdirector.googleapis.com
+  name: trafficdirector.googleapis.com
 ---
 # Traffic Director
-apiVersion: cnrm.cloud.google.com/v1alpha1
-kind: CloudService
+apiVersion: serviceusage.cnrm.cloud.google.com/v1beta1
+kind: Service
 metadata:
-  name: anthos
+  annotations:
+    cnrm.cloud.google.com/deletion-policy: "abandon"
+    cnrm.cloud.google.com/disable-dependent-services: "false"
   namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
-spec:
-  service: anthos.googleapis.com
+  name: anthos.googleapis.com
