--- a/asm/cluster/cluster.yaml
+++ b/asm/cluster/cluster.yaml
@@ -26,8 +26,6 @@ spec:
       disabled: true
     cloudrunConfig:
       disabled: true # {"$ref:","#/definitions/io.k8s.cli.setters.cloudrun-config-disabled"}
-  ipAllocationPolicy:
-    useIpAliases: true
   masterAuth:
     username: admin
   network: default
@@ -37,3 +35,37 @@ spec:
   nodeConfig:
     metadata:
       disable-legacy-endpoints: "true"
+---
+apiVersion: container.cnrm.cloud.google.com/v1alpha2
+kind: ContainerNodePool
+metadata:
+  clusterName: "[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.full-cluster-name"}
+  name: default-pool
+  namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
+spec:
+  initialNodeCount: 2
+  autoscaling:
+    minNodeCount: 4 # {"$ref":"#/definitions/io.k8s.cli.setters.minNodeCount"}
+    maxNodeCount: 8 # {"$ref":"#/definitions/io.k8s.cli.setters.maxNodeCount"}
+  nodeConfig:
+    diskSizeGb: 100
+    diskType: pd-standard
+    machineType: n1-standard-4
+    preemptible: false
+    oauthScopes:
+    - "https://www.googleapis.com/auth/cloud-platform"
+    - "https://www.googleapis.com/auth/compute"
+    - "https://www.googleapis.com/auth/devstorage.read_only"
+    - "https://www.googleapis.com/auth/logging.write"
+    - "https://www.googleapis.com/auth/monitoring"
+    - "https://www.googleapis.com/auth/service.management.readonly"
+    - "https://www.googleapis.com/auth/servicecontrol"
+    - "https://www.googleapis.com/auth/trace.append"
+    metadata:
+      disable-legacy-endpoints: "true"
+  management:
+    autoRepair: true
+    autoUpgrade: true
+  clusterRef:
+    name: asm-free-trial # {"$ref":"#/definitions/io.k8s.cli.setters.cluster-name"}
+
