--- a/asm-patch/kustomization.yaml
+++ b/asm-patch/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- base # {"type":"string","x-kustomize":{"partialSetters":[{"name":"base-dir","value":"base"}]}}
+- base # {"$ref":"#/definitions/io.k8s.cli.setters.base-dir"}
 - resources
 patches:
 - path: patches/cluster-patch.yaml
