--- a/asm-patch/patches/nodepool-patch.yaml
+++ b/asm-patch/patches/nodepool-patch.yaml
@@ -16,11 +16,11 @@ apiVersion: container.cnrm.cloud.google.com/v1alpha2
 kind: ContainerNodePool
 metadata:
   annotations:
-    cnrm.cloud.google.com/project-id: "PROJECT_ID" # {"type":"string","x-kustomize":{"setter":{"name":"gcloud.core.project"}}}
+    cnrm.cloud.google.com/project-id: "PROJECT_ID" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
   name: default-pool
 spec:
   clusterRef:
-    name: asm-cluster # {"type":"string","x-kustomize":{"setter":{"name":"cluster-name","value":"asm-cluster"}}}
+    name: asm-cluster # {"$ref":"#/definitions/io.k8s.cli.setters.cluster-name"}
   nodeConfig:
     workloadMetadataConfig:
       nodeMetadata: GKE_METADATA_SERVER
