--- a/asm/trafficdirector/td-istiod-asm.yaml
+++ b/asm/trafficdirector/td-istiod-asm.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
@@ -14,10 +13,10 @@ spec:
     kind: Deployment
     name: asm-td
   metrics:
-    - type: Resource
-      resource:
-        name: cpu
-        targetAverageUtilization: 80
+  - type: Resource
+    resource:
+      name: cpu
+      targetAverageUtilization: 80
 ---
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
@@ -42,19 +41,19 @@ metadata:
     release: asm-td
 spec:
   ports:
-    - port: 443
-      name: https-inject
-      targetPort: 15017
-    - port: 15010
-      name: http2-xds # direct
-    - port: 15011
-      name: https-xds-spifeecert # mTLS
-    - port: 15012
-      name: https-xds-dnscert # mTLS
-    - port: 8080
-      name: http-legacy-discovery # direct
-    - port: 15014
-      name: http-monitoring
+  - port: 443
+    name: https-inject
+    targetPort: 15017
+  - port: 15010
+    name: http2-xds # direct
+  - port: 15011
+    name: https-xds-spifeecert # mTLS
+  - port: 15012
+    name: https-xds-dnscert # mTLS
+  - port: 8080
+    name: http-legacy-discovery # direct
+  - port: 15014
+    name: http-monitoring
   selector:
     app: asm-td
 ---
@@ -84,130 +83,127 @@ spec:
     spec:
       serviceAccountName: asm-td-service-account
       containers:
-        - name: discovery
-          image: gcr.io/asm-testing/pilot:release-1.5-asm-10 # {"$ref":"#/definitions/io.k8s.cli.substitutions.pilot-image"}
-          imagePullPolicy: Always
-          ports:
-            - containerPort: 8080
-            - containerPort: 15010
-          readinessProbe:
-            httpGet:
-              path: /ready
-              port: 8080
-            initialDelaySeconds: 5
-            periodSeconds: 30
-            timeoutSeconds: 5
-          # Args used by pilot - istiod doesn't use args.
-          args:
-            - "discovery"
-            # TODO: make them default if istiod mode is enabled (ISTIOD_ADDR set)
-            - --secureGrpcAddr
-            - ""
-            - --namespace
-            - "istio-system"
-            # CRDs are created early, no need to hold RBAC permission
-            - --disable-install-crds=true
-          envFrom:
-          - configMapRef:
-              name: istio-galley-config-td
-              optional: false
-          env:
-            - name: POD_NAME
-              valueFrom:
-                fieldRef:
-                  apiVersion: v1
-                  fieldPath: metadata.name
-            - name: POD_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  apiVersion: v1
-                  fieldPath: metadata.namespace
-            - name: CONFIG_NAMESPACE
-              value: istio-system
-            - name: ISTIOD_ADDR
-              value: asm-td.istio-system.svc:15012
-            - name: INJECTION_WEBHOOK_CONFIG_NAME
-              value: asm-td
-            - name: PILOT_EXTERNAL_GALLEY
-              value: "false"
-            - name: PROXY_IMAGE
-              value: gcr.io/asm-testing/proxyv2:release-1.5-asm-10 # { "$ref": "#/definitions/io.k8s.cli.subsstitutions.proxy-image" }
-          resources:
-            requests:
-              cpu: 101m
-              memory: 64Mi
-          volumeMounts:
-            # For backward compat, if secrets already exists. Currently not used/implemented
-            # Instead shifting traffic to istiod
-            - name: istio-certs
-              mountPath: /var/run/secrets/istio
-              readOnly: true
-            # Technically not needed on this pod - but it helps debugging/testing SDS
-            # Should be removed after everything works.
-            - name: istio-token
-              mountPath: /var/run/secrets/tokens
-              readOnly: true
-            - name: local-certs
-              mountPath: /var/run/secrets/istio-dns
-            - name: cacerts
-              mountPath: /etc/cacerts
-              readOnly: true
-            - name: mesh
-              mountPath: /etc/istio/config
-              readOnly: true
-            - name: inject
-              mountPath: /var/lib/istio/inject
-              readOnly: true
-            - name: asm-td
-              mountPath: /var/lib/istio/local
-              readOnly: true
-            - mountPath: /var/secrets/google
-              name: google-cloud-key
-            - mountPath: /var/lib/istio/galley
-              name: asm-td
-
+      - name: discovery
+        image: gcr.io/asm-testing/pilot:release-1.5-asm-10 # {"$ref":"#/definitions/io.k8s.cli.substitutions.pilot-image"}
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 8080
+        - containerPort: 15010
+        readinessProbe:
+          httpGet:
+            path: /ready
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 30
+          timeoutSeconds: 5
+        # Args used by pilot - istiod doesn't use args.
+        args:
+        - "discovery"
+        # TODO: make them default if istiod mode is enabled (ISTIOD_ADDR set)
+        - --secureGrpcAddr
+        - ""
+        - --namespace
+        - "istio-system"
+        # CRDs are created early, no need to hold RBAC permission
+        - --disable-install-crds=true
+        envFrom:
+        - configMapRef:
+            name: istio-galley-config-td
+            optional: false
+        env:
+        - name: POD_NAME
+          valueFrom:
+            fieldRef:
+              apiVersion: v1
+              fieldPath: metadata.name
+        - name: POD_NAMESPACE
+          valueFrom:
+            fieldRef:
+              apiVersion: v1
+              fieldPath: metadata.namespace
+        - name: CONFIG_NAMESPACE
+          value: istio-system
+        - name: ISTIOD_ADDR
+          value: asm-td.istio-system.svc:15012
+        - name: INJECTION_WEBHOOK_CONFIG_NAME
+          value: asm-td
+        - name: PILOT_EXTERNAL_GALLEY
+          value: "false"
+        - name: PROXY_IMAGE
+          value: gcr.io/asm-testing/proxyv2:release-1.5-asm-10 # { "$ref": "#/definitions/io.k8s.cli.substitutions.proxy-image" }
+        resources:
+          requests:
+            cpu: 101m
+            memory: 64Mi
+        volumeMounts:
+        - # Instead shifting traffic to istiod
+          name: istio-certs # For backward compat, if secrets already exists. Currently not used/implemented
+          mountPath: /var/run/secrets/istio
+          readOnly: true
+        - # Should be removed after everything works.
+          name: istio-token # Technically not needed on this pod - but it helps debugging/testing SDS
+          mountPath: /var/run/secrets/tokens
+          readOnly: true
+        - name: local-certs
+          mountPath: /var/run/secrets/istio-dns
+        - name: cacerts
+          mountPath: /etc/cacerts
+          readOnly: true
+        - name: mesh
+          mountPath: /etc/istio/config
+          readOnly: true
+        - name: inject
+          mountPath: /var/lib/istio/inject
+          readOnly: true
+        - name: asm-td
+          mountPath: /var/lib/istio/local
+          readOnly: true
+        - mountPath: /var/secrets/google
+          name: google-cloud-key
+        - mountPath: /var/lib/istio/galley
+          name: asm-td
       securityContext:
         # Temp, for debugging (need to install tools, etc)
         runAsUser: 0
         runAsGroup: 1337
       volumes:
-        - emptyDir:
-            medium: Memory
-          name: local-certs
-        - name: istio-token
-          projected:
-            sources:
-              - serviceAccountToken:
-                  audience: "[PROJECT_ID].svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
-                  expirationSeconds: 43200
-                  path: istio-token
-        - name: istio-certs
-          secret:
-            secretName: istio.istio-pilot-service-account
-            optional: true
-        - name: asm-td
-          configMap:
-            name: istio-galley-config-td
-            optional: false
-        - name: google-cloud-key
-          secret:
-            secretName: google-cloud-key
-            optional: true
-        # Optional: user-generated root
-        - name: cacerts
-          secret:
-            secretName: cacerts
-            optional: true
-        # Optional - image should have
-        - name: inject
-          configMap:
-            name: istio-sidecar-injector-td
-            optional: true
-        - name: mesh
-          configMap:
-            name: istio-mesh-td
-            optional: false
-        - name: galley
-          configMap:
-            name: istio-galley-config-td
-            optional: false
+      - emptyDir:
+          medium: Memory
+        name: local-certs
+      - name: istio-token
+        projected:
+          sources:
+          - serviceAccountToken:
+              audience: "[PROJECT_ID].svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
+              expirationSeconds: 43200
+              path: istio-token
+      - name: istio-certs
+        secret:
+          secretName: istio.istio-pilot-service-account
+          optional: true
+      - name: asm-td
+        configMap:
+          name: istio-galley-config-td
+          optional: false
+      - name: google-cloud-key
+        secret:
+          secretName: google-cloud-key
+          optional: true
+      # Optional: user-generated root
+      - name: cacerts
+        secret:
+          secretName: cacerts
+          optional: true
+      # Optional - image should have
+      - name: inject
+        configMap:
+          name: istio-sidecar-injector-td
+          optional: true
+      - name: mesh
+        configMap:
+          name: istio-mesh-td
+          optional: false
+      - name: galley
+        configMap:
+          name: istio-galley-config-td
+          optional: false
