--- a/asm/trafficdirector/td-galley-rbac.yaml
+++ b/asm/trafficdirector/td-galley-rbac.yaml
@@ -1,12 +1,12 @@
-#---
-#apiVersion: v1
-#kind: ServiceAccount
-#metadata:
-#  name: asm-galley-service-account
-#  namespace: istio-system
-#  labels:
-#    app: asm-galley
-#    release: asm-galley
+---
+# Added to galley-sa file
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: asm-galley-service-account
+  namespace: istio-system
+  annotations:
+    iam.gke.io/gcp-service-account: "asm-galley-service-account@[PROJECT_ID].iam.gserviceaccount.com" # {"$ref":"#/definitions/io.k8s.cli.substitutions.k8s-galley-service-account"}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
