--- a/cluster/cluster/cluster.yaml
+++ b/cluster/cluster/cluster.yaml
@@ -27,7 +27,7 @@ spec:
     httpLoadBalancing:
       disabled: true
     cloudrunConfig:
-      disabled: true # {"$ref:","#/definitions/io.k8s.cli.setters.cloudrun-config-disabled"}
+      disabled: true # {"$ref":"#/definitions/io.k8s.cli.setters.cloudrun-config-disabled"}
   masterAuth:
     username: admin
   network: default
