--- a/asm-patch/resources/istio-operator.yaml
+++ b/asm-patch/resources/istio-operator.yaml
@@ -16,6 +16,7 @@ apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 metadata:
   clusterName: "PROJECT_ID/us-central1-c/asm-cluster" # {"$ref":"#/definitions/io.k8s.cli.substitutions.cluster-name"}
+  name: default-istio-operator
 spec:
   profile: asm
   hub: gcr.io/istio-testing # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.hub"}
