Updating kpt setters to match convention

--- a/asm/trafficdirector/td-configmap-galley.yaml
+++ b/asm/trafficdirector/td-configmap-galley.yaml
@@ -4,12 +4,12 @@ metadata:
   name: istio-galley-config-td
   namespace: istio-system
 data:
-  TRAFFICDIRECTORADDRESS: "trafficdirector.googleapis.com:443" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trafficdirector-address"}
-  MESHCAADDRESS: "meshca.googleapis.com:443" # {"$ref":"#/definitions/io.k8s.cli.substitutions.meshca-address"}
-  SINKADDRESS: "meshconfig.googleapis.com:443" # {"$ref":"#/definitions/io.k8s.cli.substitutions.meshconfig-address"}
-  SINKAUTHMODE: "GOOGLE" # {"$ref":"#/definitions/io.k8s.cli.substitutions.sink-auth-mode"}
+  TRAFFICDIRECTORADDRESS: "trafficdirector.googleapis.com:443" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.endpoint.trafficdirector-address"}
+  MESHCAADDRESS: "meshca.googleapis.com:443" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.endpoint.meshca-address"}
+  SINKADDRESS: "meshconfig.googleapis.com:443" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.serivcemesh.meshconfig-address"}
+  SINKAUTHMODE: "GOOGLE" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.sink-auth-mode"}
   SDSPATH: "unix:/etc/istio/proxy/SDS"
-  PROJECT_ID: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
+  PROJECT_ID: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
   GOOGLE_APPLICATION_CREDENTIALS: /var/secrets/google/key.json
   AUDIENCE: "[PROJECT_ID].svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
   trustDomain: "[PROJECT_ID].svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
