--- a/project/project/neg-sa.yaml
+++ b/project/project/neg-sa.yaml
@@ -3,7 +3,7 @@ apiVersion: iam.cnrm.cloud.google.com/v1alpha1
 kind: IAMServiceAccount
 metadata:
   name: neg-service-account
-  namespace: "[PROJECT_ID]"  # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
+  namespace: "[PROJECT_ID]"  # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
 spec:
   displayName: Service Account for NEG controller
   projectRoles:
@@ -13,7 +13,7 @@ spec:
 #kind: IAMPolicy
 #metadata:
 #  name: neg-iam-policy
-#  namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gcloud.core.project"}
+#  namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
 #spec:
 #  resourceRef:
 #    apiVersion: iam.cnrm.cloud.google.com/v1alpha1
